--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
             <span class="pw-grapes-deco" style="top:-10px;left:10px;">🍇</span>
             <span class="pw-grapes-deco" style="bottom:-8px;right:12px;">🍇</span>
             <span class="lock-icon">🍇🔒</span>
-            <h2>Dit is alleen voor jou</h2>
+            <h2> 4 Jet </h2>
             <p class="pw-subtitle">Voer het wachtwoord in om je verrassing te openen 💜</p>
             <p class="pw-hint" id="pw-hint-text"></p>
             <div class="password-input-wrap">
