--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Precies Vier - Valentijnsdag Editie 💜🍇</title>
+
+    <!-- PWA Meta Tags -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#7c3aed">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Precies Vier">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <meta name="description" content="Een speciaal Valentijnsdagspel, alleen voor jou 🍇💜">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;800&display=swap" rel="stylesheet">
     <style>
@@ -765,7 +774,7 @@
             <span class="pw-grapes-deco" style="top:-10px;left:10px;">🍇</span>
             <span class="pw-grapes-deco" style="bottom:-8px;right:12px;">🍇</span>
             <span class="lock-icon">🍇🔒</span>
-            <h2> 4 Jet </h2>
+            <h2>Dit is alleen voor jou</h2>
             <p class="pw-subtitle">Voer het wachtwoord in om je verrassing te openen 💜</p>
             <p class="pw-hint" id="pw-hint-text"></p>
             <div class="password-input-wrap">
@@ -1216,6 +1225,17 @@
         // ============ START ============
         // Game wordt geïnitialiseerd na het invoeren van het wachtwoord
         // initGame() wordt aangeroepen vanuit checkPassword()
+    </script>
+
+    <!-- Service Worker Registration -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./sw.js')
+                    .then(() => console.log('🍇 Service Worker geregistreerd!'))
+                    .catch((err) => console.log('SW fout:', err));
+            });
+        }
     </script>
 </body>
 
