Update password card content and icons

--- a/index.html
+++ b/index.html
@@ -773,15 +773,14 @@
         <div class="password-card">
             <span class="pw-grapes-deco" style="top:-10px;left:10px;">🍇</span>
             <span class="pw-grapes-deco" style="bottom:-8px;right:12px;">🍇</span>
-            <span class="lock-icon">🍇🔒</span>
-            <h2>Dit is alleen voor jou</h2>
-            <p class="pw-subtitle">Voer het wachtwoord in om je verrassing te openen 💜</p>
+            <span class="lock-icon">🍇</span>
+            <h2> 4 Jet </h2>
             <p class="pw-hint" id="pw-hint-text"></p>
             <div class="password-input-wrap">
                 <input type="text" id="pw-input" placeholder="Wachtwoord..." autocomplete="off" autofocus>
             </div>
             <div class="pw-error-msg" id="pw-error"></div>
-            <button class="pw-submit" onclick="checkPassword()">🍇 Open mijn verrassing</button>
+            <button class="pw-submit" onclick="checkPassword()">Open mijn verrassing</button>
         </div>
     </div>
 
