Update gameConfig descriptions and words

--- a/index.html
+++ b/index.html
@@ -953,23 +953,23 @@
         const gameConfig = [
             {
                 group: 1, // 🟡 Geel — makkelijkste
-                description: "DINGEN DIE IK LEUK VIND AAN JOU",
-                words: ["LACH", "HUMOR", "OGEN", "STEM"]
+                description: "VER_",
+                words: ["LOPEN", "LIEZEN", "STAAN", "GAAN"]
             },
             {
                 group: 2, // 🩷 Roze
-                description: "ONZE FAVORIETE ETEN",
-                words: ["SUSHI", "PIZZA", "TACO'S", "PASTA"]
+                description: "_TIJN",
+                words: ["VALEN", "LA", "WOES", "SA"]
             },
             {
                 group: 3, // 💜 Paars
-                description: "STEDEN WAAR WE ZIJN GEWEEST",
-                words: ["PARIJS", "LONDEN", "ROMA", "BERLIJN"]
+                description: "MUZIEKNOTEN",
+                words: ["DO", "RE", "MI", "FA"]
             },
             {
                 group: 4, // 💚 Groen — moeilijkste
-                description: "WOORDEN DIE EINDIGEN OP 'JE'",
-                words: ["KATJE", "HONDJE", "BOOMPJE", "HUISJE"]
+                description: "GEASSOCIEERD MET SCHAT",
+                words: ["JIJ", "JE", "KIST", "AS"]
             }
         ];
 
