Update password and hint in index.html

--- a/index.html
+++ b/index.html
@@ -884,8 +884,8 @@
         // ║                                                                ║
         // ╚══════════════════════════════════════════════════════════════════╝
 
-        const PASSWORD = "druifje";         // ← Verander dit naar jouw wachtwoord
-        const PASSWORD_HINT = "Hint: 🍇💜";  // ← Verander dit naar jouw hint (of laat leeg: "")
+        const PASSWORD = "R";         // ← Verander dit naar jouw wachtwoord
+        const PASSWORD_HINT = "Raadsel: Er is een verschil tussen een vogel en een vrucht. Wat is het verschil? Hint: het antwoord staat in het raadsel";  // ← Verander dit naar jouw hint (of laat leeg: "")
 
         // ╔══════════════════════════════════════════════════════════════════╗
         // ║   ⬆️  EINDE WACHTWOORD CONFIG ⬆️                              ║
