Update game configuration descriptions and words

--- a/index.html
+++ b/index.html
@@ -953,23 +953,23 @@
         const gameConfig = [
             {
                 group: 1, // 🟡 Geel — makkelijkste
-                description: "VER_",
-                words: ["LOPEN", "LIEZEN", "STAAN", "GAAN"]
+                description: "_DAG",
+                words: ["MAAN", "ZON", "DONDER", "VRIJ"]
             },
             {
                 group: 2, // 🩷 Roze
-                description: "_TIJN",
-                words: ["VALEN", "LA", "WOES", "SA"]
+                description: "NOODWEER",
+                words: ["REGEN", "HAGEL", "WIND", "BLIKSEM"]
             },
             {
                 group: 3, // 💜 Paars
-                description: "MUZIEKNOTEN",
-                words: ["DO", "RE", "MI", "FA"]
+                description: "WAT IK VAN JOU VIND",
+                words: ["MOOI", "SLIM", "SEXY", "LIEF"]
             },
             {
                 group: 4, // 💚 Groen — moeilijkste
-                description: "GEASSOCIEERD MET SCHAT",
-                words: ["JIJ", "JE", "KIST", "AS"]
+                description: "EMOTIES DIE JIJ MIJ LAAT VOELEN",
+                words: ["VERLIEFD", "GELIEFD", "OPGEWONDEN", "GELUKKIG"]
             }
         ];
 
