--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Precies Vier - Valentijnsdag Editie 💜🍇</title>
+    <title>Precies Vier - 4 Jet 💜🍇</title>
 
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="manifest.json">
