Update password and game configuration descriptions

--- a/index.html
+++ b/index.html
@@ -884,8 +884,8 @@
         // ║                                                                ║
         // ╚══════════════════════════════════════════════════════════════════╝
 
-        const PASSWORD = "R";         // ← Verander dit naar jouw wachtwoord
-        const PASSWORD_HINT = "Raadsel: Er is een verschil tussen een vogel en een vrucht. Wat is het verschil? Hint: het antwoord staat in het raadsel";  // ← Verander dit naar jouw hint (of laat leeg: "")
+        const PASSWORD = "Dobbelsteen";         // ← Verander dit naar jouw wachtwoord
+        const PASSWORD_HINT = "Raadsel: Wat heeft 21 ogen maar kan niks zien? Hint: vul één woord in.";  // ← Verander dit naar jouw hint (of laat leeg: "")
 
         // ╔══════════════════════════════════════════════════════════════════╗
         // ║   ⬆️  EINDE WACHTWOORD CONFIG ⬆️                              ║
@@ -953,23 +953,23 @@
         const gameConfig = [
             {
                 group: 1, // 🟡 Geel — makkelijkste
-                description: "_DAG",
-                words: ["MAAN", "ZON", "DONDER", "VRIJ"]
+                description: "OP_",
+                words: ["LOPEN", "PASSEN", "WEKKEN", "TIE"]
             },
             {
                 group: 2, // 🩷 Roze
-                description: "NOODWEER",
-                words: ["REGEN", "HAGEL", "WIND", "BLIKSEM"]
+                description: "WOORDEN VOOR 🍤",
+                words: ["SHRIMP", "LOCH NESS MONSTER", "AUBERGINE", "LOUIS J.R."]
             },
             {
                 group: 3, // 💜 Paars
-                description: "WAT IK VAN JOU VIND",
-                words: ["MOOI", "SLIM", "SEXY", "LIEF"]
+                description: "DINGEN DIE MOOI OM JOUW NEK STAAN",
+                words: ["KETTING", "MIJN HANDEN", "SJAAL", "HALSBAND"]
             },
             {
                 group: 4, // 💚 Groen — moeilijkste
-                description: "EMOTIES DIE JIJ MIJ LAAT VOELEN",
-                words: ["VERLIEFD", "GELIEFD", "OPGEWONDEN", "GELUKKIG"]
+                description: "VOOR DE NIEUWE PUP 🐶",
+                words: ["BENCH", "BOTJE", "MOND", "RIEM"]
             }
         ];
 
