--- a/index.html
+++ b/index.html
@@ -884,8 +884,8 @@
         // ║                                                                ║
         // ╚══════════════════════════════════════════════════════════════════╝
 
-        const PASSWORD = "Dobbelsteen";         // ← Verander dit naar jouw wachtwoord
-        const PASSWORD_HINT = "Raadsel: Wat heeft 21 ogen maar kan niks zien? Hint: vul één woord in.";  // ← Verander dit naar jouw hint (of laat leeg: "")
+        const PASSWORD = "De Leeuw";         // ← Verander dit naar jouw wachtwoord
+        const PASSWORD_HINT = "Ik waak sinds je geboorte van boven over je. Ook ben ik (hopelijk) je toekomst. Lief en oplettend ben ik in het kort, maar dan natuurlijk in het Nederlands. Jet en Louis stond altijd al in de sterren geschreven.";  // ← Verander dit naar jouw hint (of laat leeg: "")
 
         // ╔══════════════════════════════════════════════════════════════════╗
         // ║   ⬆️  EINDE WACHTWOORD CONFIG ⬆️                              ║
@@ -953,23 +953,23 @@
         const gameConfig = [
             {
                 group: 1, // 🟡 Geel — makkelijkste
-                description: "OP_",
-                words: ["LOPEN", "PASSEN", "WEKKEN", "TIE"]
+                description: "Rose",
+                words: ["KISS FROM A", "ZOMERWIJN", "MEDIUM RARE BIEFSTUK", "UNHOLY ROSEMARY"]
             },
             {
                 group: 2, // 🩷 Roze
-                description: "WOORDEN VOOR 🍤",
-                words: ["SHRIMP", "LOCH NESS MONSTER", "AUBERGINE", "LOUIS J.R."]
+                description: "Wood",
+                words: ["Y ALLEN", "STOCK", "HOUT", "PECKER"]
             },
             {
                 group: 3, // 💜 Paars
-                description: "DINGEN DIE MOOI OM JOUW NEK STAAN",
-                words: ["KETTING", "MIJN HANDEN", "SJAAL", "HALSBAND"]
+                description: "DE",
+                words: ["THE", "IL", "EL", "LA"]
             },
             {
                 group: 4, // 💚 Groen — moeilijkste
-                description: "VOOR DE NIEUWE PUP 🐶",
-                words: ["BENCH", "BOTJE", "MOND", "RIEM"]
+                description: "EEUWEN",
+                words: ["L", "SN", "SCHR", "M"]
             }
         ];
 
