--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
         // ╚══════════════════════════════════════════════════════════════════╝
 
         const PASSWORD = "De Leeuw";         // ← Verander dit naar jouw wachtwoord
-        const PASSWORD_HINT = "Ik waak sinds je geboorte van boven over je. Ook ben ik (hopelijk) je toekomst. Lief en oplettend ben ik in het kort, maar dan natuurlijk in het Nederlands. Jet en Louis stond altijd al in de sterren geschreven.";  // ← Verander dit naar jouw hint (of laat leeg: "")
+        const PASSWORD_HINT = "Ik waak sinds je geboorte van boven over je. Ook ben ik (hopelijk) je toekomst. Lief en oplettend ben ik in het kort, maar dan natuurlijk in het Nederlands. Jet en Louis stond altijd al in de sterren geschreven. Hint: twee woorden";  // ← Verander dit naar jouw hint (of laat leeg: "")
 
         // ╔══════════════════════════════════════════════════════════════════╗
         // ║   ⬆️  EINDE WACHTWOORD CONFIG ⬆️                              ║
