Update modal content for anniversary celebration

--- a/index.html
+++ b/index.html
@@ -855,9 +855,9 @@
     <div id="modal-overlay">
         <div class="modal-content">
             <span class="close-modal" onclick="closeModal()">&times;</span>
-            <span class="mascot">🍇💜</span>
-            <h2>Perfecte score!</h2>
-            <p>Speciaal gemaakt voor jou met liefde ❤️</p>
+            <span class="mascot">🍇👩🏽‍❤️‍👨🏻</span>
+            <h2>Fijne anniversary druif!</h2>
+            <p> Hierbij de naam van het restaurant van vanavond ❤️</p>
             <div id="modal-summary" style="margin-top:20px;"></div>
         </div>
     </div>
