Change descriptions to uppercase in gameConfig

--- a/index.html
+++ b/index.html
@@ -953,12 +953,12 @@
         const gameConfig = [
             {
                 group: 1, // 🟡 Geel — makkelijkste
-                description: "Rose",
+                description: "ROSE",
                 words: ["KISS FROM A", "ZOMERWIJN", "MEDIUM RARE BIEFSTUK", "UNHOLY ROSEMARY"]
             },
             {
                 group: 2, // 🩷 Roze
-                description: "Wood",
+                description: "WOOD",
                 words: ["Y ALLEN", "STOCK", "HOUT", "PECKER"]
             },
             {
