Update header icons and subtitle text

--- a/index.html
+++ b/index.html
@@ -828,9 +828,9 @@
         </div>
 
         <header>
-            <span class="header-icon">🍇💜</span>
+            <span class="header-icon">🍇❤️</span>
             <h1>Precies Vier</h1>
-            <div class="subtitle" id="date-display">Valentijnsdag Editie</div>
+            <div class="subtitle" id="date-display">Anniversary Edition Editie</div>
         </header>
 
         <div id="game-container">
