Update date display text for anniversary edition

--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
             const date = new Date();
             const options = { day: 'numeric', month: 'long', year: 'numeric' };
             document.getElementById('date-display').innerText =
-                date.toLocaleDateString('nl-NL', options) + ' · Valentijnsdag Editie';
+                date.toLocaleDateString('nl-NL', options) + ' · 2e Anniversary Editie';
 
             // Tiles opbouwen
             gameConfig.forEach(category => {
