Update title and description in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Precies Vier - 4 Jet 💜🍇</title>
+    <title>Precies Vier - 4 Jet ❤️ 🍇</title>
 
     <!-- PWA Meta Tags -->
     <link rel="manifest" href="manifest.json">
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Precies Vier">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <meta name="description" content="Een speciaal Valentijnsdagspel, alleen voor jou 🍇💜">
+    <meta name="description" content="Een speciaal spel, voor jou 🍇❤️">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;800&display=swap" rel="stylesheet">
     <style>
